increment snap does not work in perspective view at 0.01 scale (for scene and grid floor) #39112

Closed
opened 2014-03-11 12:47:43 +01:00 by Philip Sibbering · 7 comments

System Information
Windows 7 ultimate, Quadro 4000, Tesla M2050, graphics driver 332.50

Blender Version
Blender 2.69 r60995 - 64bit, also Portableapps version (same build)

Short description of error
increment snap does not work in perspective viewport with scene scale set to 0.01 and display > grid floor scale 0.01

Exact steps for others to reproduce the error
New scene, add cube mesh.
Set scene scale to 0.01
Set Grid floor scale to 0.01
Increment snap no longer works in perspective view, either as a main window or in quad view. Translation is smooth, with no jumps. Orthogonal views still snap as usual both in single and quad view.

Notes: setting the grid floor scale back to 1 allows snap in perspective view, and the snap is much smaller than the lines shown. However I loose the very fine grid for close up work. Currently switching back and forth on the grid floor scale between 1 and 0.01 which working on 28mm scale models.

Based on a (as simple as possible) attached .blend file with minimum amount of steps;

increment-broken-scale-0.01.blend

**System Information** Windows 7 ultimate, Quadro 4000, Tesla M2050, graphics driver 332.50 **Blender Version** Blender 2.69 r60995 - 64bit, also Portableapps version (same build) **Short description of error** increment snap does not work in perspective viewport with scene scale set to 0.01 and display > grid floor scale 0.01 **Exact steps for others to reproduce the error** New scene, add cube mesh. Set scene scale to 0.01 Set Grid floor scale to 0.01 Increment snap no longer works in perspective view, either as a main window or in quad view. Translation is smooth, with no jumps. Orthogonal views still snap as usual both in single and quad view. Notes: setting the grid floor scale back to 1 allows snap in perspective view, and the snap is much smaller than the lines shown. However I loose the very fine grid for close up work. Currently switching back and forth on the grid floor scale between 1 and 0.01 which working on 28mm scale models. Based on a (as simple as possible) attached .blend file with minimum amount of steps; [increment-broken-scale-0.01.blend](https://archive.blender.org/developer/F80643/increment-broken-scale-0.01.blend)

Changed status to: 'Open'

Changed status to: 'Open'
Philip Sibbering self-assigned this 2014-03-11 12:47:43 +01:00

Added subscriber: @Philip_S

Added subscriber: @Philip_S

This issue was referenced by blender/blender-addons-contrib@6919ffbf4b

This issue was referenced by blender/blender-addons-contrib@6919ffbf4b2fdd1de3792de62ab9b613bef2d40f

This issue was referenced by 6919ffbf4b

This issue was referenced by 6919ffbf4b2fdd1de3792de62ab9b613bef2d40f

Added subscriber: @mont29

Added subscriber: @mont29
Philip Sibbering was unassigned by Bastien Montagne 2014-03-11 16:38:56 +01:00
Bastien Montagne self-assigned this 2014-03-11 16:38:56 +01:00

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Closed by commit 6919ffbf4b.

Closed by commit 6919ffbf4b.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#39112
No description provided.