Fix T39112: increment snap does not work in perspective view at 0.01 scale (for scene and grid floor)

In case of "floor" grid (i.e. perspective views), unit_scale correction was not applied...