source/blender/editors/space_view3d/view3d_draw.c
@@ -3262,9 +3262,8 @@ static void view3d_main_area_draw_objects(const bContext *C, ARegion *ar, const 
 		glEnable(GL_MULTISAMPLE_ARB);
 	}
 
-
-	/* needs to be done always, gridview is adjusted in drawgrid() now */
-	rv3d->gridview = v3d->grid;
+	/* needs to be done always, gridview is adjusted in drawgrid() now, but only for ortho views. */
+	rv3d->gridview = v3d->grid / scene->unit.scale_length;
 
 	if ((rv3d->view == RV3D_VIEW_USER) || (rv3d->persp != RV3D_ORTHO)) {
 		if ((v3d->flag2 & V3D_RENDER_OVERRIDE) == 0) {
